@@ -73,9 +73,13 @@ public class DownloadFileWithProxyServer {
                                    FileDownloadFilter filter) throws FileNotFoundException {
     List<File> files = filter.getDownloadedFiles();
     if (files.isEmpty()) {
-      throw new FileNotFoundException("Failed to download file " + anyClickableElement);
+      throw new FileNotFoundException("Failed to download file " + anyClickableElement + 
+          ", all intercepted responses: " + filter.getResponses());
 
     }
+    
+    log.info("Downloaded file: " + files.get(0).getAbsolutePath());
+    log.info("Just in case, all intercepted responses: " + filter.getResponses());
     return files.get(0);
   }
 }
